// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBar renders the UI snapshots correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="filter-bar-defaultFilterBarNoButtons"
>
  <button
    className="chakra-button css-1xdhyk6"
    id="filter-bar-defaultFilterBarNoButtons-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show Filter 
  </button>
</div>
`;

exports[`FilterBar renders the UI snapshots correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="filter-bar-filterBarWithClearAllButton"
>
  <h2
    className="chakra-heading css-1xdhyk6"
  >
    FilterBar
  </h2>
  <div
    className="chakra-stack css-gpv9hk"
  >
    <div
      className="chakra-stack css-6dfzd0"
    >
      <button
        className="chakra-button css-1e643n3"
        id="filterBarWithClearAllButton-clear-all-button"
        onClick={[Function]}
        type="button"
      >
        Clear Filters
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterBar renders the UI snapshots correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="filter-bar-filterBarWithSubmitAllButton"
>
  <h2
    className="chakra-heading css-1xdhyk6"
  >
    FilterBar
  </h2>
  <div
    className="chakra-stack css-gpv9hk"
  >
    <div
      className="chakra-stack css-6dfzd0"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="filterBarWithSubmitAllButton-submit-all-button"
        onClick={[Function]}
        type="button"
      >
        Apply Filters
      </button>
    </div>
  </div>
</div>
`;

exports[`FilterBar renders the UI snapshots correctly 4`] = `
<div
  className="css-1xdhyk6"
  id="filter-bar-filterBarWithButtons"
>
  <h2
    className="chakra-heading css-1xdhyk6"
  >
    FilterBar
  </h2>
  <div
    className="chakra-stack css-gpv9hk"
  >
    <div
      className="chakra-stack css-6dfzd0"
    >
      <button
        className="chakra-button css-1xdhyk6"
        id="filterBarWithButtons-submit-all-button"
        onClick={[Function]}
        type="button"
      >
        Apply Filters
      </button>
      <button
        className="chakra-button css-1e643n3"
        id="filterBarWithButtons-clear-all-button"
        onClick={[Function]}
        type="button"
      >
        Clear Filters
      </button>
    </div>
  </div>
</div>
`;
